fix(headless): Respect ACCOUNT_EMAIL_VERIFICATION_BY_CODE_MAX_ATTEMPTS
